# apeg

./: .eslintrc  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: Main.tsx  Root.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/persistence/: Cargo.toml
src-tauri/persistence/persistence-internal/: Cargo.toml
src-tauri/persistence/persistence-internal/src/: lib.rs
src-tauri/persistence/persistence-macro/: Cargo.toml
src-tauri/persistence/persistence-macro/src/: lib.rs
src-tauri/persistence/src/: embedded_persister.rs  lib.rs  persister.rs
src-tauri/src/: main.rs
src-tauri/src/module/: base_node.rs  mod.rs  module.rs  version.rs
src-tauri/src/node/: mod.rs
src-tauri/src/persistence/: data_extension.rs  entity.rs  mod.rs  store.rs
src-tauri/src/persistence2/: entity.rs  mod.rs  store.rs
src/components/: HoverListener.tsx  MenuBar.tsx  MenuBarActionItem.tsx  MenuBarDialogItem.tsx  MenuBarDividerItem.tsx  MenuBarDropDown.tsx  MenuBarGroup.tsx  MenuBarSubMenuItem.tsx  NestedDropdownContextProvider.tsx  Shortcut.tsx
src/components/menu_bar/: MenuBar.tsx  MenuBarActionItem.tsx  MenuBarDialogItem.tsx  MenuBarDividerItem.tsx  MenuBarDropDown.tsx  MenuBarGroup.tsx  MenuBarSubMenuItem.tsx
src/data/: Theme.ts
src/features/: Routes.tsx
src/features/apeg/: ApegApp.tsx  ApegMenuBar.tsx
src/features/apeg/components/: ApegMenuBar.tsx  BaseNode.tsx  (+8 more)
src/features/app_menu/: AppMenu.tsx
src/features/foo/: FooApp.tsx
src/features/lazy_latex/: LazyLatexApp.tsx
src/hooks/: AnchorPopupHook.tsx
src/utils/: visualDebug.ts
(+7 files in other folders)
