[package]
name = "persistence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
persistence-internal = { path = "persistence-internal" }
persistence-macro = { path = "persistence-macro" }
serde = { version = "1.0", features = ["derive"] }
bson = "2.5.0"
jammdb = "0.9.0"